1999-09-22 John R. Jackson  <jrj@purdue.edu>

	* configure.in: wrong variable when processing LIBRARY_DIRS.  Fix
	  compliments of John M. Vogtle <jmvogtle@kodak.com>.

1999-09-19 John R. Jackson  <jrj@purdue.edu>

	* server-src/amverify.sh.in: this script is important enough it should
	  not depend on having perl installed.  Clean up the AIX "mt status"
	  code.  Test for presense of other restore programs and check that
	  they are executable during processing.

1999-09-19 John R. Jackson  <jrj@purdue.edu>

	* server-src/amverify.sh.in: put back an "mt status" wait loop I
	  erroneously removed, but protect it from AIX.

1999-09-19 John R. Jackson  <jrj@purdue.edu>

	* common-src/util.c: fix math in bind_portrange so ports requested
	  are between those the caller passed and make sure port 0 does not
	  accidentally get requested, which returns a non-privileged port.
	* common-src/dgram.c: bind_portrange last port argument is inclusive.
	* common-src/stream.c: ditto.
	* recover-src/amrecover.c: ditto.
	* recover-src/extract_list.c: ditto.

1999-09-19 John R. Jackson  <jrj@purdue.edu>

	* server-src/driver.c: do not send a FILE_WRITE to the taper when the
	  tape queue is empty during a TRYAGAIN (driver core dumped).

1999-09-19 John R. Jackson  <jrj@purdue.edu>

	* server-src/taper.c: fix protocol problems when out of tape.  Add
	  FAKE_TAPE_ERROR debugging code to simulate tape errors.  Fix problem
	  with command line argument processing.

1999-09-18 John R. Jackson  <jrj@purdue.edu>

	* configure.in: several compress/uncompress variables were not being
	  set properly.

1999-09-18 John R. Jackson  <jrj@purdue.edu>

	* client-src/sendbackup.c: pclose returns a child exit status of the
	  pipe, not an errno, so do not try to strerror it.
	  Have the index child process exit with the pclose exit code.
	  Treat index failures as strange rather than fatal so the dump gets
	  fully processed.  It's more important to have the dump image than