@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: extract_list.c,v 1.43.2.7 1999/09/19 19:10:26 jrj Exp $
+ * $Id: extract_list.c,v 1.43.2.8 1999/09/23 22:22:45 oliva Exp $
  *
  * implements the "extract" command in amrecover
  */
@@ -73,7 +73,7 @@ pid_t extract_restore_child_pid = -1;
 static EXTRACT_LIST *extract_list = NULL;
 
 #ifdef SAMBA_CLIENT
-unsigned short samba_extract_method = SAMBA_SMBCLIENT;
+unsigned short samba_extract_method = SAMBA_TAR;
 #endif /* SAMBA_CLIENT */
 
 #define READ_TIMEOUT	30*60
@@ -1250,11 +1250,10 @@ static void extract_files_child(in_fd, elist)
 
 #ifdef SAMBA_CLIENT
 	if (dumptype == IS_UNKNOWN && strcmp(file.program, SAMBA_CLIENT) ==0) {
-	    dumptype = IS_SAMBA;
-
-	    if (samba_extract_method == SAMBA_TAR) {
+	    if (samba_extract_method == SAMBA_TAR)
 	      dumptype = IS_TAR;
-	    }
+	    else
+	      dumptype = IS_SAMBA;
 	}
 #endif
     }
@@ -1491,6 +1490,10 @@ void extract_files P((void))
     printf("\n");
     getcwd(buf, sizeof(buf));
     printf("Restoring files into directory %s\n", buf);
+#ifdef SAMBA_CLIENT
+    if (samba_extract_method == SAMBA_SMBCLIENT)
+      printf("(unless it is a Samba backup, that will go through to the SMB server)\n");
+#endif
     if (!okay_to_continue())
 	return;
     printf("\n");
