@@ -1,3 +1,10 @@
+1999-09-23  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
+
+	* recover-src/extract_list.c (samba_extract_method): Default to
+	SAMBA_TAR, for similarity with other restore programs.
+	(extract_files_child): If restore with SMBCLIENT is enabled, explain
+	that Samba shares will be restored to the SMB share.
+
 1999-09-22 John R. Jackson  <jrj@purdue.edu>
 
 	* configure.in: wrong variable when processing LIBRARY_DIRS.  Fix
@@ -476,7 +483,7 @@
 	* changer-src/scsi-aix.c: (SCSI_ExecuteCommand) Add missing
 	parameter to DecodeExtSense.
 
-	* changer-src/scsi-hpux.c: Added static char rcsid[] = "$Id: ChangeLog,v 1.205.2.283 1999/09/23 00:48:07 jrj Exp $";
+	* changer-src/scsi-hpux.c: Added static char rcsid[] = "$Id: ChangeLog,v 1.205.2.284 1999/09/23 22:22:37 oliva Exp $";
 	* changer-src-/chg-scsi.c: dito
 	* changer-src/scsi-changer-driver.c: dito
 
